apps/istio/base/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-server
  namespace: istio-system
spec:
  host: "kubernetes.default.svc.cluster.local" #Disabling it for Kube API Server communication
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "default"
  namespace: istio-system
  labels:
    release: istio-system
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE
